infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: panmotya/auth
        readinessProbe:
          httpGet:
            path: /health
            port: 4000
          initialDelaySeconds: 2
          periodSeconds: 3
          failureThreshold: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 4000
          initialDelaySeconds: 10
          periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
  - name: auth
    protocol: TCP
    port: 4000
    targetPort: 4000
