infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
      - name: tickets
        image: panmotya/tickets
        readinessProbe:
          httpGet:
            path: /health
            port: 4000
          initialDelaySeconds: 2
          periodSeconds: 3
          failureThreshold: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 4000
          initialDelaySeconds: 10
          periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  type: ClusterIP
  selector:
    app: tickets
  ports:
  - name: tickets
    protocol: TCP
    port: 4000
    targetPort: 4000
